# xetrack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  database.db  pyproject.toml  tmp.db  track.db
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.xet/: config.toml
examples/: 01_quickstart.py  02_track_functions.py  03_dataclass_unpacking.py  04_track_assets.py  05_function_caching.py  06_logging_integration.py  07_data_analysis.py  08_sql_queries.py  09_model_monitoring.py  README.md  run_all.py
skills/benchmark/: SKILL.md  SUMMARY.md
skills/benchmark/.claude-plugin/: plugin.json
skills/benchmark/assets/: llm_finetuning_template.py  sklearn_benchmark_template.py  throughput_benchmark_template.py
skills/benchmark/references/: analysis.md  build-and-cache.md  design.md  dev-phase.md  duckdb-analysis.md  execution.md  methodology.md
skills/benchmark/scripts/: analyze_cache_hits.py  export_summary.py  validate_benchmark.py
skills/git-versioning/: .gitignore  SKILL.md  SUMMARY.md
skills/git-versioning/.claude-plugin/: plugin.json
skills/git-versioning/assets/: dvc_yaml_template.yaml  params_yaml_template.yaml
skills/git-versioning/references/: data_versioning.md  dvc-setup.md  merge-rebase.md  quickstart.md  use-cases.md  workflows.md
skills/git-versioning/scripts/: experiment_explorer.py  merge_artifacts.py  model_manager.py  setup_worktree.sh  version_tag.py
skills/xetrack/: SKILL.md
skills/xetrack/.claude-plugin/: plugin.json
tests/: assets_test.py  bashplotlib_test.py  cache_test.py  cli_test.py  conftest.py  copy_test.py  dataclass_edge_cases_test.py  dataclass_test.py  dataframe_backend_test.py  duckdb_test.py  function_test.py  function_track.py  git_test.py  json_test.py  logger_test.py  merge_test.py  ml_test.py  nested_dataclass_test.py  reader_duckdb_test.py  reader_test.py  system_tracking_test.py  table_name_test.py  track_test.py  tracker_test.py  types_test.py  user_request_test.py  valid_name_test.py
xetrack/: __init__.py  _dataframe.py  _json.py  assets.py  bashplotlib.py  cli.py  config.py  connection.py  constants.py  duckdb.py  engine.py  git.py  logging.py  reader.py  stats.py  tracker.py  watchman.py
