[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xetrack"
version = "0.0.3"
description = "A simple tool for benchamrking and tracking machine learning models and experiments."
readme = "README.md"
packages = [{ include = "xetrack" }]
authors = ["xdssio <jonathan@xdss.io>"]
keywords = [
    "machine-learning",
    "duckdb",
    "pandas",
]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
duckdb = "^0.8.1"
pandas = "^2.0.3"
psutil = "^5.9.5"

[tool.poetry.extras]
dev = ["pytest", "pyxet"]

[project.urls]
Homepage = "https://github.com/xdssio/xetrack"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]