[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xetrack"
version = "0.2.2"
description = "A simple tool for benchamrking and tracking machine learning models and experiments."
readme = "README.md"
packages = [{ include = "xetrack" }]
authors = ["xdssio <jonathan@xdss.io>"]
keywords = [
    "machine-learning",
    "duckdb",
    "pandas",
    "sqlitedict", 
    "xxhash",
    "loguru"

]
license = "BSD-3-Clause"


[tool.poetry.dependencies]
python = "^3.9"
duckdb = "^0.9.0"
pandas = "^2.0.3"
psutil = "^5.9.5"
coolname = "^2.2.0"
typer = "^0.9.0"
sqlitedict = "^2.1.0"
xxhash = "^3.4.1"
loguru = "^0.7.0"
tabulate = "^0.9.0"
cloudpickle = "^2.0.0"

[tool.poetry.extras]
dev = ["pytest", "scikit-learn"]

[project]
name = "xetrack"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/xdssio/xetrack"


[tool.poetry.scripts]
xt = "xetrack.cli:app"