[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xetrack"
version = "0.5.0"
description = "A simple tool for benchamrking and tracking machine learning models and experiments."
readme = "README.md"
packages = [{ include = "xetrack" }]
authors = ["xdssio <jonathan@xdss.io>"]
keywords = [
    "machine-learning",
    "duckdb",
    "pandas",
    "sqlitedict", 
    "xxhash",
    "loguru",
    "monitoring",
    "tracking",
    "experimentation",
    "benchmarking",    
    "data-science",
    "data-analysis",
    "data-visualization"
]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0.3"
psutil = ">=5.9.5"
coolname = ">=2.2.0"
typer = ">=0.9.0"
xxhash = ">=3.4.1"
loguru = ">=0.7.0"
tabulate = ">=0.9.0"
cloudpickle = ">=2.0.0"
numpy = "^1.26"

# Optional dependencies
sqlitedict = { version = ">=2.0.0", optional = true }
duckdb = { version = ">=0.8.0", optional = true }
bashplotlib = { version = ">=0.6.0", optional = true }
diskcache = { version = ">=5.6.0", optional = true }

[tool.poetry.extras]
dev = ["pytest", "scikit-learn", "bashplotlib", "sqlitedict", "duckdb", "diskcache"]
assets =["sqlitedict"]
duckdb = ["duckdb"]
bashplotlib = ["bashplotlib"]
cache = ["diskcache"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
scikit-learn = "<1.7"
requests = "^2.32.5"

[project]
name = "xetrack"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/xdssio/xetrack"


[tool.poetry.scripts]
xt = "xetrack.cli:app"